k8s/apps/default/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      hostname: prowlarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: prowlarr
          image: ghcr.io/onedr0p/prowlarr-develop:1.13.0.4217
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 9696
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
