k8s/apps/default/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: web
      protocol: TCP
